fixed the hidden searchparams on smaller screens (i think!)

--- a/m2m/media/styles/cleaned.css
+++ b/m2m/media/styles/cleaned.css
@@ -119,7 +119,7 @@ div#wrapper{
 
 div#container{ 
     width: 1000px;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     padding: 25px;
     padding-top: 0px;
     
